--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
   "rewrites": [
-    { "source": "/articles/:slug", "destination": "/api/preview?slug=:slug" }
+    { "source": "/articles/:slug", "destination": "/article.html" }
   ]
 }
